Refonte des beans concepts